--- a/style1.css
+++ b/style1.css
@@ -10,9 +10,10 @@ header {
 	 font-size: 35px;
 	 color: yellow;
 }
-html {
+body {
 	
-    background-color: gray; 
+	
+	background-color: gray;
 	
 	
 }
