--- a/style1.css
+++ b/style1.css
@@ -78,3 +78,18 @@ a:active {
 a:visited {
     color: red;
 }
+p {
+	
+	color: yellow;
+	font-size: 25px;
+	
+	
+}
+
+#watermark {
+	
+	text-align: center;
+	font-size: 15px;
+	
+}
+
