--- a/style1.css
+++ b/style1.css
@@ -73,10 +73,10 @@ main {
   font-size: 50px;
  }
 a:active {
-    color: gray;
+    color: red;
 }
 a:visited {
-    color: red;
+    color: black;
 }
 p {
 	
